# mlops-project

./: .gitattributes  README.md  pyproject.toml  requirements.txt  setup.sh
.conda/etc/: aau_token
.streamlit/: config.toml
models/: best_model_regression.pkl  iforest_anomaly_detection_pipeline.pkl  mushroom_species_model.pkl
notebooks/: 02_mushroom_species.ipynb  Lan.ipynb  residential.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: 02_mushroom_species.py  raphapp.py
src/app/: home.py
src/app/pages/: 01_Singapore Resale Price Prediction.py  01_residential.py  02_Mushroom Edibility Prediction.py  02_mushroom_species.py  03_Transaction Anomaly Detection.py  03_transaction.py  raphapp.py  streamlit_app.py
