[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["WolfieIA <bella.nguyen3004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
numpy = ">=1.22.4"
pycaret[full] = "<=3.3.2"
streamlit = ">=1.22.0"
pandas = ">=1.5.3"
matplotlib = ">=3.7.1"
seaborn = ">=0.12.2"
pillow = ">=10.4.0"
catboost = "==1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
